Prevent too much space caused by weird <br> added to templates

--- a/web/css/base/_form.less
+++ b/web/css/base/_form.less
@@ -201,6 +201,10 @@
             float: left;
             margin: 0 0 @5;
             border-bottom: 1px solid var(--gray-200);
+
+            + br {
+                display: none;
+            }
         }
         .actions-toolbar {
             margin-top: @5;
